--- a/vars/main.yml
+++ b/vars/main.yml
@@ -49,7 +49,7 @@ mariadb_config_defaults_mysqld:
   ## * Basic Settings
   ##
   user: mysql
-  pid_file: "{{ mariadb_run_directory }}/mariadb.pid"
+  pid_file: "{{ mariadb_run_directory }}/mysqld.pid"
   socket: "{{ mariadb_socket }}"
   # port: 3306
   # basedir: /usr
