--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,47 +13,47 @@ defaults:
     working-directory: 'ansible-mariadb'
 
 jobs:
-  # arch:
-  #   name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
-  #   runs-on: ubuntu-20.04
-  #   if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       image:
-  #         - archlinux:latest
-  #         - artixlinux:latest
-  #       ansible-version:
-  #         - '6.7'
-  #       scenario:
-  #         - default
-  #   steps:
-  #     - name: check out the codebase.
-  #       uses: actions/checkout@v3
-  #       with:
-  #         path: 'ansible-mariadb'
-  #
-  #     - name: 🐍 set up python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.x'
-  #
-  #     - name: install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install -r test-requirements.txt
-  #
-  #     - name: test with tox
-  #       run: |
-  #         make \
-  #           test \
-  #           -e TOX_SCENARIO="${{ matrix.scenario }}" \
-  #           -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
-  #           -e DISTRIBUTION="${{ matrix.image }}"
-  #       env:
-  #         PY_COLORS: '1'
-  #         ANSIBLE_FORCE_COLOR: '1'
-  #         DISTRIBUTION: ${{ matrix.image }}
+  arch:
+    name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
+    runs-on: ubuntu-20.04
+    if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - archlinux:latest
+          - artixlinux:latest
+        ansible-version:
+          - '6.7'
+        scenario:
+          - default
+    steps:
+      - name: check out the codebase.
+        uses: actions/checkout@v3
+        with:
+          path: 'ansible-mariadb'
+
+      - name: 🐍 set up python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r test-requirements.txt
+
+      - name: test with tox
+        run: |
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          DISTRIBUTION: ${{ matrix.image }}
 
   deb:
     name: "${{ matrix.image }} / ansible: ${{ matrix.ansible-version }}"
@@ -63,11 +63,9 @@ jobs:
       fail-fast: false
       matrix:
         image:
-          - debian:10
-          # - debian:11
-          # - debian:12
-          - ubuntu:20.04
-          # - ubuntu:22.04
+          - debian:11
+          - debian:12
+          - ubuntu:22.04
         ansible-version:
           - '6.7'
         scenario:
