--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r test-requirements.txt
 
+      - name: set apparmor in complain mode
+        run: |
+          echo -n complain > /sys/module/apparmor/parameters/mode ;
+          if [ -e /usr/sbin/aa-teardown ]; then /usr/sbin/aa-teardown; fi
+
       - name: test with tox
         run: |
           make \
