test complain mode for apparmor

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -42,4 +42,8 @@
 
   roles:
     - role: apparmor
+      when:
+        - ansible_os_family | lower == 'debian'
     - role: snapd
+      when:
+        - ansible_os_family | lower == 'debian'
