--- a/.github/workflows/custom-datadir.yml
+++ b/.github/workflows/custom-datadir.yml
@@ -67,6 +67,8 @@ jobs:
           - debian:11
         ansible-version:
           - '6.7'
+        python_version:
+          - "3.10.11"
         scenario:
           - custom-datadir
 
