--- a/.github/workflows/use-tls.yml
+++ b/.github/workflows/use-tls.yml
@@ -25,6 +25,8 @@ jobs:
           - debian:11
         ansible-version:
           - '6.7'
+        python_version:
+          - "3.10.11"
         scenario:
           - with-tls
 
