--- a/.github/workflows/use-tls.yml
+++ b/.github/workflows/use-tls.yml
@@ -25,7 +25,7 @@ jobs:
           - debian:11
         ansible-version:
           - '6.7'
-        python_version:
+        python-version:
           - "3.10"
         scenario:
           - with-tls
