--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'ansible-mariadb'
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: 🐍 set up python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "${{ matrix.python_version }}"
 
       - name: install dependencies
         run: |
@@ -76,11 +77,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'ansible-mariadb'
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: 🐍 set up python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "${{ matrix.python_version }}"
 
       - name: install dependencies
         run: |
