--- a/.github/workflows/use-tls.yml
+++ b/.github/workflows/use-tls.yml
@@ -23,10 +23,10 @@ jobs:
       matrix:
         image:
           - debian:11
+        python_version:
+          - "3.11.3"
         ansible-version:
-          - '6.7'
-        python-version:
-          - "3.10"
+          - "6.7"
         scenario:
           - with-tls
 
@@ -35,11 +35,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'ansible-mariadb'
+          ref: ${{ github.event.workflow_run.head_branch }}
 
-      - name: set up python ${{ matrix.python-version }}
+      - name: 🐍 set up python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "${{ matrix.python_version }}"
 
       - name: install dependencies
         run: |
