--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         image:
           - archlinux:latest
           - artixlinux:latest
+        python_version:
+          - "3.10.11"
+          - "3.11.3"
         ansible-version:
           - '6.7'
         scenario:
@@ -67,6 +70,9 @@ jobs:
           - debian:11
           - debian:12
           - ubuntu:22.04
+        python_version:
+          - "3.10.11"
+          - "3.11.3"
         ansible-version:
           - '6.7'
         scenario:
