--- a/.github/workflows/primary-replica.yml
+++ b/.github/workflows/primary-replica.yml
@@ -81,11 +81,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: 'ansible-mariadb'
+          ref: ${{ github.event.workflow_run.head_branch }}
 
-      - name: set up python ${{ matrix.python-version }}
+      - name: 🐍 set up python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "${{ matrix.python_version }}"
 
       - name: install dependencies
         run: |
