support mariadb binaries

--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -14,6 +14,7 @@
   mariadb_root_password:
     dba_root_username: "{{ mariadb_root_username }}"
     dba_root_password: "{{ mariadb_root_password }}"
+    dba_hostname: "{{ mariadb_hostname | default(omit) }}"
     dba_socket: "{{ mariadb_socket }}"
     dba_config_directory: "{{ mariadb_config_dir }}"
     mycnf_file: "{{ mariadb_root_home }}/.my.cnf"
