--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -122,7 +122,7 @@
 - name: install mysqltuner
   ansible.builtin.get_url:
     url: "https://raw.githubusercontent.com/major/MySQLTuner-perl/master/{{ item.name }}"
-    dest: /usr/local/bin/{{ item.name }}
+    dest: "/usr/local/bin/{{ item.name }}"
     mode: "{{ item.mode }}"
   register: _download_mysqltuner
   until: _download_mysqltuner is succeeded
@@ -131,11 +131,11 @@
   check_mode: false
   loop:
     - name: mysqltuner.pl
-      mode: 0o750
+      mode: "0750"
     - name: basic_passwords.txt
-      mode: 0o640
+      mode: "0640"
     - name: vulnerabilities.csv
-      mode: 0o640
+      mode: "0640"
   loop_control:
     label: "{{ item.name }}"
   when:
