--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -13,6 +13,9 @@
         - name: update pacman system
           ansible.builtin.command: |
             pacman --refresh --sync --sysupgrade --noconfirm
+          register: pacman
+          changed_when: pacman.rc != 0
+          failed_when: pacman.rc != 0
 
         - name: create depends service
           ansible.builtin.copy:
@@ -25,6 +28,7 @@
             - ansible_os_family | lower == 'artix linux'
 
     - name: update package cache
+      become: true
       ansible.builtin.package:
         update_cache: true
 
@@ -35,15 +39,3 @@
           - "distribution version : {{ ansible_distribution_major_version }}"
           - "ansible version      : {{ ansible_version.full }}"
           - "python version       : {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}"
-
-- name: prepare container
-  hosts: all
-  gather_facts: true
-
-  roles:
-    - role: apparmor
-      when:
-        - ansible_os_family | lower == 'debian'
-    - role: snapd
-      when:
-        - ansible_os_family | lower == 'debian'
