--- a/molecule/with-tls/prepare.yml
+++ b/molecule/with-tls/prepare.yml
@@ -37,6 +37,6 @@
   gather_facts: true
 
   roles:
-    - role: apparmor
-    - role: snapd
-    - role: snakeoil
+    # - role: apparmor
+    # - role: snapd
+    - role: bodsch.core.snakeoil
