--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,6 @@ toxworkdir = /tmp/.tox/
 
 skipsdist = true
 
-requires =
-    tox-docker<=4.1
-    requests<2.32.0
-
 [testenv]
 passenv = *
 
@@ -33,6 +29,7 @@ deps =
     ansible_8.5: ansible>=8.5,<8.6
     ansible_9.0: ansible>=9.0,<9.1
     ansible_9.5: ansible>=9.5,<9.6
+    ansible_10.0: ansible>=10.0,<10.1
 
 #commands_pre =
 #    /usr/bin/find {toxinidir} -type f -not -path '{toxworkdir}/*' -path '*/__pycache__/*' -name '*.py[c|o]' -delete
