updates for ansible-lint
and molecule test

--- a/molecule/configured/group_vars/all/vars.yml
+++ b/molecule/configured/group_vars/all/vars.yml
@@ -1,7 +1,9 @@
 ---
-mariadb_use_external_repo: false
 
-mariadb_root_password: Y5FZfKXzCeOWGf4kBOiFSp6Il
+mariadb_use_external_repo: true
+mariadb_version: 10.4
+
+mariadb_root_password: "" # Y5FZfKXzCeOWGf4kBOiFSp6Il
 
 mariadb_databases:
   - name: molecule
