--- a/.github/workflows/primary-replica.yml
+++ b/.github/workflows/primary-replica.yml
@@ -31,7 +31,7 @@ jobs:
         python_version:
           - "3.11"
         ansible-version:
-          - "6.7"
+          - "8.5"
         scenario:
           - with-replication
 
@@ -65,7 +65,7 @@ jobs:
             -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
             -e DISTRIBUTION="${{ matrix.image }}"
 
-  deb:
+  debian:
     name: "${{ matrix.image }} / ansible ${{ matrix.ansible-version }} / python ${{ matrix.python }}"
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'schedule' || github.event.workflow_run.conclusion == 'success' }}
