fix molecule config for 10.4

--- a/molecule/mariadb-10.4/molecule.yml
+++ b/molecule/mariadb-10.4/molecule.yml
@@ -10,7 +10,7 @@ driver:
 
 platforms:
   - name: database
-    image: "bodsch/ansible-${DISTRIBUTION:-debian:12}"
+    image: "bodsch/ansible-debian:10"
     command: ${MOLECULE_DOCKER_COMMAND:-""}
     docker_host: "${DOCKER_HOST:-unix://run/docker.sock}"
     privileged: true
@@ -20,7 +20,7 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
       - /var/lib/containerd
     capabilities:
-      - SYS_ADMIN
+      - ALL
     tmpfs:
       - /run
       - /tmp
