--- a/molecule/mariadb-10.4/prepare.yml
+++ b/molecule/mariadb-10.4/prepare.yml
@@ -47,3 +47,11 @@
           - "distribution version : {{ ansible_distribution_major_version }}"
           - "ansible version      : {{ ansible_version.full }}"
           - "python version       : {{ ansible_python.version.major }}.{{ ansible_python.version.minor }}"
+
+- name: prepare container
+  hosts: all
+  gather_facts: true
+
+  roles:
+    - role: apparmor
+    - role: snapd
