--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -61,6 +61,22 @@
             state: link
             force: true
 
+        - name: reload apparmor
+          ansible.builtin.command: |
+            apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+          register: apparmor
+          changed_when: apparmor.rc != 0
+          failed_when: apparmor.rc != 0
+          ignore_errors: true
+
+        - name: apparmor status
+          ansible.builtin.command: |
+            aa-status
+          register: apparmor
+          changed_when: apparmor.rc != 0
+          failed_when: apparmor.rc != 0
+          ignore_errors: true
+
 - name: remove policy-rc.d
   ansible.builtin.file:
     path: /usr/sbin/policy-rc.d
