add test for galera-cluster

--- a/.github/workflows/configured.yml
+++ b/.github/workflows/configured.yml
@@ -140,6 +140,8 @@ jobs:
           - custom-datadir
           # primary with replica
           - with-replication
+          # galera cluster
+          - galera-cluster
           # single instance with TLS
           - with-tls
 
