update configuration management
support galera for archlinux too

--- a/molecule/galera-cluster/converge.yml
+++ b/molecule/galera-cluster/converge.yml
@@ -2,8 +2,10 @@
 
 - name: converge
   hosts: all
+  # serial: 1
   any_errors_fatal: false
   become: false
+  gather_facts: true
 
   roles:
     - role: ansible-mariadb
