--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -1,6 +1,8 @@
 ---
 
 - name: ensure mariadb databases are present.  # noqa args[module]
+  when:
+    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
   community.mysql.mysql_db:
     name: "{{ item.name }}"
     collation: "{{ item.collation | default('utf8_general_ci') }}"
