--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -28,6 +28,8 @@
     mycnf_file: "{{ mariadb_root_home }}/.my.cnf"
 
 - name: secure database (remove anonymous user, disallow remote root login, ...)
+  when:
+    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
   mariadb_secure:
     disallow_anonymous_users: true
     disallow_test_database: true
