--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -1,6 +1,8 @@
 ---
 
 - name: create or remove mariadb users
+  when:
+    - not mariadb_galera_cluster or (mariadb_galera_cluster and mariadb_galera_primary)
   community.mysql.mysql_user:
     name: "{{ item.name }}"
     password: "{{ item.password }}"
